testdata/update/error.txtar
# Repo without GitHub Actions
! exec ghasum update no-actions/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Uninitialized repo with GitHub Actions
! exec ghasum update uninitialized/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'ghasum has not yet been initialized'

# Sumfile with syntax error in headers
! exec ghasum update sumfile-syntax-headers/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'sumfile headers are invalid'
stderr 'invalid header on line 2'

# Sumfile with syntax error in entries
! exec ghasum update sumfile-syntax-entries/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'syntax error on line 3'

# Sumfile with duplicate headers
! exec ghasum update sumfile-duplicate-headers/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'sumfile headers are invalid'
stderr 'duplicate header "foo" on line 3'

# Sumfile with duplicate entries
! exec ghasum update sumfile-duplicate-entries/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'checksums are corrupted'
stderr 'duplicate entry found'

# Invalid workflow
! exec ghasum update invalid-workflow/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse workflow'
stderr '.github/workflows/workflow.yml'

# Invalid action manifest
! exec ghasum verify -cache .cache/ invalid-manifest/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse manifest'
stderr 'action manifest parsing failed for actions/composite@v1'

# Invalid local action manifest
! exec ghasum init -cache .cache/ invalid-local-manifest/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse manifest'
stderr 'action manifest parsing failed for //./.github/actions/hello-world-action'

# Invalid reusable workflow
! exec ghasum verify -cache .cache/ invalid-reusable-workflow/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'could not parse workflow'
stderr 'reusable workflow parsing failed for actions/reusable/.github/workflows/workflow.yml@v2'

# Directory not found
! exec ghasum update directory-not-found/
! stdout 'Ok'
stderr 'an unexpected error occurred'
stderr 'no such file or directory'

-- invalid-local-manifest/.github/actions/hello-world-action/action.yml --
name: Hello world action
description: Says 'Hello world!'

runs:
  using: composite
  steps:
- name: Say hello world
  uses: actions/github-script@v8.0.0
  with:
    script: console.log("Hello world!");
-- invalid-local-manifest/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-24.04
    steps:
    - name: This step uses a local action
      uses: ./.github/actions/hello-world-action
-- invalid-manifest/.github/workflows/gha.sum --
version 1

actions/composite@v1 sD5wRDv4rn1UBi0Mzs9jHAB++jiJuAVuggdh437FKHE=
actions/setup-go@v5 Vi4XogAGoojozgoXrRN/OBL93QIcbsxLJEOOAwlx+e8=
-- invalid-manifest/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-24.04
    steps:
    - name: This step uses transitive actions
      uses: actions/composite@v1
-- invalid-reusable-workflow/.github/workflows/gha.sum --
version 1

actions/reusable@v2 piApJ2nBrUrAxy6SjlRAsF6DpwTNQxYctpWJkhvqGN0=
actions/setup-java@v4.7.1 ZcPr3aVvmk2yL8zkjqDUpH+YLqGwjtenFrjEk3OEZ3k=
-- invalid-reusable-workflow/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    uses: actions/reusable/.github/workflows/workflow.yml@v2
-- invalid-workflow/.github/workflows/gha.sum --
version 1

actions/checkout@v4 Xl8z/l21IIpcBDsjpnq7jsBPk/RY26RwvDVL8FrajmE=
-- invalid-workflow/.github/workflows/workflow.yml --
name: Faulty workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
  - name: Checkout repository
    uses: actions/checkout@v4
-- no-actions/.keep --
This file exists to create a repo that does not use Github Actions.
-- sumfile-duplicate-entries/.github/workflows/gha.sum --
version 1

actions/checkout@v4 rfcqiYqRAnhqMjwnw/oJp2lqI5zRjHTtu2vQ9/ss4x0=
actions/checkout@v4 oJp2lqI5zRjHTtu2vQ9/rfcqiYqRAnhqMjwnw/ss4x0=
-- sumfile-duplicate-headers/.github/workflows/gha.sum --
version 1
foo bar
foo bar
-- sumfile-syntax-entries/.github/workflows/gha.sum --
version 1

this-action/is-missing@a-checksum
-- sumfile-syntax-headers/.github/workflows/gha.sum --
version 1
foobar
-- uninitialized/.github/workflows/workflow.yml --
name: Example workflow
on: [push]

jobs:
  example:
    name: example
    runs-on: ubuntu-22.04
    steps:
    - name: Checkout repository
      uses: actions/checkout@v4
    - name: Install Go
      uses: actions/setup-go@v5
      with:
        go-version-file: go.mod
    - name: This step does not use an action
      run: Echo 'hello world!'
-- .cache/actions/composite/v1/action.yml --
name: actions/composite@v1
runs:
  steps:
- name: Also a direct dependency
  uses: actions/setup-go@v5
-- .cache/actions/reusable/v2/.github/workflows/workflow.yml --
name: Faulty reusable workflow
on: [workflow_dispatch]

jobs:
  example:
    name: example
    runs-on: ubuntu-24.04
    steps:
  - name: Unique transitive dependency
    uses: actions/setup-java@v4.7.1
-- .cache/actions/setup-go/v5/action.yml --
name: actions/setup-go@v5
-- .cache/actions/setup-java/v4.7.1/action.yml --
name: actions/setup-java@v4.7.1
